# misanthropic

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  appcast.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
examples/: test-breakthrough.py  test-misanthropic.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: api.js  app.jsx  components.jsx  styles.css  theme.js
frontend/src/pages/: accounts.jsx  analytics.jsx  doctor.jsx  keys.jsx  overview.jsx  requests.jsx  settings.jsx  wizard.jsx
packaging/: DISTRIBUTION.md  app_main.py  build.sh  finish-signing.sh  make_dmg.sh  publish-release.sh  release.sh  setup_app.py
packaging/icons/: appicon.icns  draw.py
src/breakthrough/: __init__.py  app.py  claude.py  cli.py  dashboard.py  prompts.py  request_log.py  server.py  sessions.py  translate.py  updater.py
src/misanthropic/: __init__.py  __main__.py  accounts.py  app.py  claude.py  cli.py  codex.py  dashboard.py  doctor.py  errors.py  history.py  limits.py  models.py  pricing.py  savings.py  server.py  sessions.py  settings.py  tool_bridge.py  tool_shim.py  translate.py  updater.py
src/misanthropic/static/: index.html
src/misanthropic/static/assets/: index-BF98LPIG.js  index-BNCKuHoT.js  index-BTFJf4n0.js  index-BYAtfN7u.js  index-BaYl0z0P.js  index-BenudTGJ.js  index-BhlP-OHv.js  index-BjiCdDjk.js  index-BowH_K_H.js  index-CDiPtpc_.css  index-CDmGN_N1.js  index-CVvU6pgK.css  index-CZR00TYl.css  index-ChyTbSIu.js  index-DM_ufRmN.css  index-DX3EinUJ.js  index-DXSRmrnx.css  index-DYYHwl9u.css  index-DaR2fiRB.js  index-DcJ42M4V.css  index-DqrCvgjC.css  index-HyV_M5jz.js
tests/: conftest.py  fake_codex.py  fake_tool_claude.py  test_accounts.py  test_analytics.py  test_balancing.py  test_claude.py  test_codex_contract.py  test_contract.py  test_failover.py  test_failover_policy.py  test_limits.py  test_models.py  test_pricing.py  test_savings.py  test_server.py  test_sessions.py  test_thinking.py  test_tools_contract.py  test_translate.py
