[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breakthrough"
version = "0.4.0"
description = "Anthropic-API-compatible server backed by your local Claude Code CLI. No API key."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Breakthrough" }]
keywords = ["claude", "anthropic", "api", "proxy", "claude-code", "cli", "messages-api"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
# No runtime dependencies. Generation runs through the local `claude` CLI,
# using the login the user already has. Nothing to install, no API key.
dependencies = []

# The core (server + CLI) has zero runtime deps. The menu-bar app adds rumps.
[project.optional-dependencies]
app = ["rumps>=0.4"]

[project.scripts]
breakthrough = "breakthrough.cli:main"
breakthrough-app = "breakthrough.app:main"

[project.urls]
Homepage = "https://github.com/Blacklord100/breakthrough-cli"

[tool.hatch.build.targets.wheel]
packages = ["src/breakthrough"]
