[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "misanthropic"
version = "1.2.0"
description = "The Anthropic Messages API, conjured out of your own Claude Code login. No API key. No per-token bill. Localhost only."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Misanthropic" }]
keywords = ["claude", "anthropic", "api", "proxy", "claude-code", "cli", "messages-api", "subscription", "no-api-key", "local-llm"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
# No runtime dependencies. Generation runs through the local `claude` CLI,
# using the login the user already has. Nothing to install, no API key.
dependencies = []

# The core (server + CLI) has zero runtime deps. The menu-bar app adds rumps.
[project.optional-dependencies]
app = ["rumps>=0.4"]
dev = ["pytest>=7", "anthropic>=0.40"]  # anthropic: SDK contract tests

[project.scripts]
misanthropic = "misanthropic.cli:main"
misanthropic-app = "misanthropic.app:main"

[project.urls]
Homepage = "https://github.com/Blacklord100/misanthropic"

[tool.hatch.build.targets.wheel]
packages = ["src/misanthropic"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
